# AgenticAI-CampusX

./: main.py  pyproject.toml  requirements.txt
LangChain/: 0_test.ipynb
LangChain/2.chatModels/: 1_chatmodel_openai.ipynb  2_chatmodel_anthropic.ipynb  3_chatmodel_google.ipynb  4_chatmodel_hf_api.ipynb  5_chatmodel_hf_local.ipynb  6_chatmodel_ChatGroq.ipynb
LangGraph/: 0_test_installation.ipynb  1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_prompt_chaining.ipynb  4_batsman_workflow.ipynb  5_UPSC_essay_workflow.ipynb  6_quadratic_equation_workflow.ipynb  7_review_reply_workflow.ipynb  8_X_post_generator.ipynb
